--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="colorGrey">#6C6960</color>
+    <color name="colorDarkGrey">#494949</color>
+    <color name="colorWhile">#fff</color>
+
+
 </resources>
