--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="bottom"
 
-    android:background="@drawable/notebook11">
+    android:background="@drawable/notebook11"
+    tools:ignore="MissingDefaultResource">
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/inputScroll"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="horizontal"
-        app:layout_constraintVertical_weight="66"
         app:layout_constraintBottom_toTopOf="@id/resultView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"        >
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_weight="66">
+
         <EditText
             android:id="@+id/inputView"
             android:layout_width="match_parent"
@@ -25,50 +28,51 @@
             android:padding="10dp"
             android:textSize="36sp" />
     </androidx.core.widget.NestedScrollView>
+
     <TextView
         android:id="@+id/resultView"
-        app:layout_constraintVertical_weight="40"
-        android:layout_height="0dp"
         android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:gravity="right"
         android:textSize="24sp"
-        app:layout_constraintTop_toBottomOf="@id/inputScroll"
         app:layout_constraintBottom_toTopOf="@id/gLineH1"
-        />
+        app:layout_constraintTop_toBottomOf="@id/inputScroll"
+        app:layout_constraintVertical_weight="40" />
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gLineH1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.2" />
+        app:layout_constraintGuide_percent="0.3" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gLineH2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.36" />
+        app:layout_constraintGuide_percent="0.44" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gLineH3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.52" />
+        app:layout_constraintGuide_percent="0.58" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gLineH4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.68" />
+        app:layout_constraintGuide_percent="0.72" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gLineH5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.84" />
+        app:layout_constraintGuide_percent="0.86" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gLineV1"
