Добавлены дневная и ночная темы + небольшие изменения в ресурсах

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -7,6 +7,8 @@
     android:layout_height="match_parent"
     android:layout_gravity="bottom"
 
+    android:backgroundTintMode="multiply"
+    android:backgroundTint="?attr/colorSurface"
     android:background="@drawable/notebook11"
     tools:ignore="MissingDefaultResource">
 
@@ -24,17 +26,17 @@
             android:id="@+id/inputView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="right"
-            android:padding="10dp"
-            android:textSize="36sp" />
+            android:gravity="end"
+            android:padding="@dimen/input_padding"
+            android:textSize="@dimen/input_text_size" />
     </androidx.core.widget.NestedScrollView>
 
     <TextView
         android:id="@+id/resultView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:gravity="right"
-        android:textSize="24sp"
+        android:gravity="end"
+        android:textSize="@dimen/result_text_size"
         app:layout_constraintBottom_toTopOf="@id/gLineH1"
         app:layout_constraintTop_toBottomOf="@id/inputScroll"
         app:layout_constraintVertical_weight="40" />
@@ -44,35 +46,42 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.3" />
+        app:layout_constraintGuide_percent="0.25" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gLineH2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.44" />
+        app:layout_constraintGuide_percent="0.38" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gLineH3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.58" />
+        app:layout_constraintGuide_percent="0.51" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gLineH4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.72" />
+        app:layout_constraintGuide_percent="0.64" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gLineH5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.86" />
+        app:layout_constraintGuide_percent="0.77" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/gLineH6"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.9" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gLineV1"
@@ -105,7 +114,7 @@
             app:layout_constraintTop_toTopOf="@id/gLineH1" />
     -->
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/buttonPlusMinus"
         style="@style/symbol_constraint_style"
         android:text="@string/buttonTextPlusMinus"
@@ -114,7 +123,7 @@
         app:layout_constraintStart_toStartOf="@id/gLineV2"
         app:layout_constraintTop_toTopOf="@id/gLineH1" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/buttonRightBracket"
         style="@style/symbol_constraint_style"
         android:text="@string/buttonRightBracket"
@@ -123,7 +132,7 @@
         app:layout_constraintStart_toStartOf="@id/gLineV1"
         app:layout_constraintTop_toTopOf="@id/gLineH1" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/buttonLeftBracket"
         style="@style/symbol_constraint_style"
         android:text="@string/buttonLeftBracket"
@@ -132,7 +141,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/gLineH1" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/buttonDel"
         style="@style/symbol_constraint_style"
         android:text="@string/buttonTextDel"
@@ -142,7 +151,7 @@
         app:layout_constraintTop_toTopOf="@id/gLineH1" />
 
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button7"
         style="@style/button_constraint_style"
         android:text="@string/buttonText7"
@@ -151,7 +160,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/gLineH2" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button8"
         style="@style/button_constraint_style"
         android:text="@string/buttonText8"
@@ -160,7 +169,7 @@
         app:layout_constraintStart_toStartOf="@id/gLineV1"
         app:layout_constraintTop_toTopOf="@id/gLineH2" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button9"
         style="@style/button_constraint_style"
         android:text="@string/buttonText9"
@@ -169,7 +178,7 @@
         app:layout_constraintStart_toStartOf="@id/gLineV2"
         app:layout_constraintTop_toTopOf="@id/gLineH2" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/buttonDivide"
         style="@style/symbol_constraint_style"
         android:text="@string/buttonTextDivide"
@@ -178,7 +187,7 @@
         app:layout_constraintStart_toStartOf="@id/gLineV3"
         app:layout_constraintTop_toTopOf="@id/gLineH2" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button4"
         style="@style/button_constraint_style"
         android:text="@string/buttonText4"
@@ -187,7 +196,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/gLineH3" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button5"
         style="@style/button_constraint_style"
         android:text="@string/buttonText5"
@@ -196,7 +205,7 @@
         app:layout_constraintStart_toStartOf="@id/gLineV1"
         app:layout_constraintTop_toTopOf="@id/gLineH3" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button6"
         style="@style/button_constraint_style"
         android:text="@string/buttonText6"
@@ -205,7 +214,7 @@
         app:layout_constraintStart_toStartOf="@id/gLineV2"
         app:layout_constraintTop_toTopOf="@id/gLineH3" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/buttonMultiply"
         style="@style/symbol_constraint_style"
         android:text="@string/buttonTextMultiply"
@@ -214,7 +223,7 @@
         app:layout_constraintStart_toStartOf="@id/gLineV3"
         app:layout_constraintTop_toTopOf="@id/gLineH3" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button1"
         style="@style/button_constraint_style"
         android:text="@string/buttonText1"
@@ -223,7 +232,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/gLineH4" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button2"
         style="@style/button_constraint_style"
         android:text="@string/buttonText2"
@@ -232,7 +241,7 @@
         app:layout_constraintStart_toStartOf="@id/gLineV1"
         app:layout_constraintTop_toTopOf="@id/gLineH4" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button3"
         style="@style/button_constraint_style"
         android:text="@string/buttonText3"
@@ -241,7 +250,7 @@
         app:layout_constraintStart_toStartOf="@id/gLineV2"
         app:layout_constraintTop_toTopOf="@id/gLineH4" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/buttonMinus"
         style="@style/symbol_constraint_style"
         android:text="@string/buttonTextMinus"
@@ -250,40 +259,51 @@
         app:layout_constraintStart_toStartOf="@id/gLineV3"
         app:layout_constraintTop_toTopOf="@id/gLineH4" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/buttonPt"
         style="@style/button_constraint_style"
         android:text="@string/buttonTextPt"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/gLineH6"
         app:layout_constraintEnd_toEndOf="@id/gLineV1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/gLineH5" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button0"
         style="@style/button_constraint_style"
         android:text="@string/buttonText0"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/gLineH6"
         app:layout_constraintEnd_toEndOf="@id/gLineV2"
         app:layout_constraintStart_toStartOf="@id/gLineV1"
         app:layout_constraintTop_toTopOf="@id/gLineH5" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/buttonEqual"
         style="@style/symbol_constraint_style"
         android:text="@string/buttonTextEqual"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/gLineH6"
         app:layout_constraintEnd_toEndOf="@id/gLineV3"
         app:layout_constraintStart_toStartOf="@id/gLineV2"
         app:layout_constraintTop_toTopOf="@id/gLineH5" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/buttonPlus"
         style="@style/symbol_constraint_style"
         android:text="@string/buttonTextPlus"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/gLineH6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/gLineV3"
         app:layout_constraintTop_toTopOf="@id/gLineH5" />
+
+    <com.google.android.material.switchmaterial.SwitchMaterial
+        android:id="@+id/DayNightSwitch"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:text="@string/day_night_switch"
+        app:switchTextAppearance="@string/day_night_switch"
+        app:layout_constraintTop_toTopOf="@id/gLineH6"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:paddingHorizontal="50dp"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
