--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,41 +1,30 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+<!--     Base application theme.-->
+<!--
+    <style name="Theme.AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        &lt;!&ndash; Customize your theme here. &ndash;&gt;
+        <item name="colorPrimary">@color/colorGrey</item>
+        <item name="colorPrimaryDark">@color/colorDarkGrey</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+-->
 
-    <style name ="row_style">
-        <item name ="android:layout_width">match_parent</item>
-        <item name ="android:layout_height">0dp</item>
+    <style name ="button_constraint_style" parent="Theme.CalculatorTheme">
+        <item name="android:layout_width">@dimen/button_width</item>
+        <item name="android:layout_height">@dimen/button_height</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:gravity">center</item>
+        <item name="android:layout_margin">@dimen/button_margin</item>
+        <item name="android:insetTop">@dimen/button_inset</item>
+        <item name="android:insetBottom">@dimen/button_inset</item>
 
+        <item name="android:textColor">?android:textColorPrimary</item>
+        <item name="android:textSize">@dimen/button_text_size</item>
+        <item name="android:backgroundTint">?attr/colorPrimary</item>
     </style>
-    <style name ="button_style">
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">match_parent</item>
-        <item name="android:layout_weight">1</item>
-        <item name="android:layout_margin">2dp</item>
-        <item name="android:textColor">@color/colorWhile</item>
-        <item name="android:background">@color/colorGrey</item>
-    </style>
-    <style name ="symbol_style" parent="button_style">
-        <item name="android:background">@color/colorDarkGrey</item>
-    </style>
-    <style name ="button_constraint_style">
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">0dp</item>
-        <item name="android:layout_weight">1</item>
-        <item name="android:layout_margin">2dp</item>
-        <item name="android:textColor">@color/colorWhile</item>
-        <item name="android:textSize">36sp </item>
-        <item name="android:background">@color/colorGrey</item>
-    </style>
+
     <style name ="symbol_constraint_style" parent="button_constraint_style">
-        <item name="android:background">@color/colorDarkGrey</item>
+        <item name="android:backgroundTint">?attr/colorPrimaryDark</item>
     </style>
 
 
