--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,14 @@
     <dimen name="button_height">0dp</dimen>
     <dimen name="button_margin">1dp</dimen>
     <dimen name="button_inset">0dp</dimen>
+    <dimen name="saveSettingsButtonMargin">1dp</dimen>
+    <dimen name="settingsWeight1">10</dimen>
+    <dimen name="settingsWeight2">10</dimen>
+    <dimen name="settingsWeightSpace">80</dimen>
+    <item name="GLineH1Prc" type="dimen" format="float">0.20</item>
+    <item name="GLineH2Prc" type="dimen" format="float">0.34</item>
+    <item name="GLineH3Prc" type="dimen" format="float">0.48</item>
+    <item name="GLineH4Prc" type="dimen" format="float">0.62</item>
+    <item name="GLineH5Prc" type="dimen" format="float">0.76</item>
+    <item name="GLineH6Prc" type="dimen" format="float">0.9</item>
 </resources>
